# pyfolio

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  pyproject.toml
.github/workflows/: ci.yml  publish.yml  workflow.yml
docs/skills/wrapping-go-with-pyo3/: SKILL.md
docs/superpowers/specs/: 2026-04-14-pyfolio-design.md
python/gofolio/: __init__.py
python/gofolio/cli/: __init__.py
python/gofolio/cli/convert/: __init__.py  controller.py  models.py  view.py
python/gofolio/utils/: __init__.py  console.py  decorators.py  rp.py
python/pyfolio/: __init__.py
python/pyfolio/cli/: __init__.py
python/pyfolio/cli/convert/: __init__.py  controller.py  view.py
python/pyfolio/utils/: __init__.py  console.py  decorators.py  rp.py
src/: document.rs  error.rs  html.rs  lib.rs
tests/: conftest.py  test_convert.py
tests/assets/: 01_simple.html  100_svg_heavy.html  10_tables_flex.html
